spacing issue, quick fix

--- a/static/styles/test.css
+++ b/static/styles/test.css
@@ -11,8 +11,8 @@ html{
 }
 
 .left{
-    line-height: 150px;
-    margin-left: 40%;
+    line-height: 100px;
+    margin-left: 1%;
 }
 
 .left > img{
